// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookBanner outside browser renders 1`] = `
Array [
  <div
    className="BookBanner__BarWrapper-sc-1avy0c0-5 MNbyW"
    data-analytics-region="book-banner-expanded"
    data-testid="bookbanner"
  >
    <div
      className="BookBanner__TopBar-sc-1avy0c0-1 jVswHX"
    >
      <a
        className="BookBanner__BookTitleLink-sc-1avy0c0-3 iGPDns"
        data-testid="details-link-expanded"
        href="/details/books/book-slug-1"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="BookBanner__LeftArrow-sc-1avy0c0-0 jjTVXA StyledIconBase-sc-bdy9j4 jbPeIR"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
          />
        </svg>
        Test Book 1
      </a>
      <h1
        className="BookBanner__BookChapter-sc-1avy0c0-4 kPUGut"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
          }
        }
      />
    </div>
  </div>,
  <div
    className="BookBanner__BarWrapper-sc-1avy0c0-5 bheBBm"
    data-analytics-region="book-banner-collapsed"
    data-testid="bookbanner-collapsed"
  >
    <div
      className="BookBanner__TopBar-sc-1avy0c0-1 jVswHX"
    >
      <a
        className="BookBanner__BookTitleLink-sc-1avy0c0-3 iJDVtP"
        data-testid="details-link-collapsed"
        href="/details/books/book-slug-1"
        onClick={[Function]}
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="BookBanner__LeftArrow-sc-1avy0c0-0 jjTVXA StyledIconBase-sc-bdy9j4 jbPeIR"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
          />
        </svg>
        Test Book 1
      </a>
      <span
        className="BookBanner__BookChapter-sc-1avy0c0-4 fNXDFo"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
          }
        }
      />
    </div>
  </div>,
]
`;

exports[`BookBanner without unsaved changes renders correctly when you pass a page and book 1`] = `
Array [
  <div
    className="BookBanner__BarWrapper-sc-1avy0c0-5 MNbyW"
    data-analytics-region="book-banner-expanded"
    data-testid="bookbanner"
  >
    <div
      className="BookBanner__TopBar-sc-1avy0c0-1 jVswHX"
    >
      <a
        className="BookBanner__BookTitleLink-sc-1avy0c0-3 iGPDns"
        data-testid="details-link-expanded"
        href="/details/books/book-slug-1"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="BookBanner__LeftArrow-sc-1avy0c0-0 jjTVXA StyledIconBase-sc-bdy9j4 jbPeIR"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
          />
        </svg>
        Test Book 1
      </a>
      <h1
        className="BookBanner__BookChapter-sc-1avy0c0-4 kPUGut"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
          }
        }
      />
    </div>
  </div>,
  <div
    className="BookBanner__BarWrapper-sc-1avy0c0-5 bheBBm"
    data-analytics-region="book-banner-collapsed"
    data-testid="bookbanner-collapsed"
  >
    <div
      className="BookBanner__TopBar-sc-1avy0c0-1 jVswHX"
    >
      <a
        className="BookBanner__BookTitleLink-sc-1avy0c0-3 iJDVtP"
        data-testid="details-link-collapsed"
        href="/details/books/book-slug-1"
        onClick={[Function]}
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="BookBanner__LeftArrow-sc-1avy0c0-0 jjTVXA StyledIconBase-sc-bdy9j4 jbPeIR"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
          />
        </svg>
        Test Book 1
      </a>
      <span
        className="BookBanner__BookChapter-sc-1avy0c0-4 fNXDFo"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
          }
        }
      />
    </div>
  </div>,
]
`;

exports[`BookBanner without unsaved changes renders correctly without osweb data 1`] = `
Array [
  <div
    className="BookBanner__BarWrapper-sc-1avy0c0-5 MNbyW"
    data-analytics-region="book-banner-expanded"
    data-testid="bookbanner"
  >
    <div
      className="BookBanner__TopBar-sc-1avy0c0-1 jVswHX"
    >
      <span
        className="BookBanner__BookTitle-sc-1avy0c0-2 gUeKV"
        data-testid="book-title-expanded"
      >
        Test Book 1
      </span>
      <h1
        className="BookBanner__BookChapter-sc-1avy0c0-4 kPUGut"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
          }
        }
      />
    </div>
  </div>,
  <div
    className="BookBanner__BarWrapper-sc-1avy0c0-5 bheBBm"
    data-analytics-region="book-banner-collapsed"
    data-testid="bookbanner-collapsed"
  >
    <div
      className="BookBanner__TopBar-sc-1avy0c0-1 jVswHX"
    >
      <span
        className="BookBanner__BookTitle-sc-1avy0c0-2 jvAwFk"
        data-testid="book-title-collapsed"
      >
        Test Book 1
      </span>
      <span
        className="BookBanner__BookChapter-sc-1avy0c0-4 fNXDFo"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
          }
        }
      />
    </div>
  </div>,
]
`;

exports[`BookBanner without unsaved changes renders correctly without pageNode 1`] = `
Array [
  <div
    className="BookBanner__BarWrapper-sc-1avy0c0-5 MNbyW"
    data-analytics-region="book-banner-expanded"
    data-testid="bookbanner"
  >
    <div
      className="BookBanner__TopBar-sc-1avy0c0-1 jVswHX"
    >
      <a
        className="BookBanner__BookTitleLink-sc-1avy0c0-3 iGPDns"
        data-testid="details-link-expanded"
        href="/details/books/book-slug-1"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="BookBanner__LeftArrow-sc-1avy0c0-0 jjTVXA StyledIconBase-sc-bdy9j4 jbPeIR"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
          />
        </svg>
        Test Book 1
      </a>
    </div>
  </div>,
  <div
    className="BookBanner__BarWrapper-sc-1avy0c0-5 bheBBm"
    data-analytics-region="book-banner-collapsed"
    data-testid="bookbanner-collapsed"
  >
    <div
      className="BookBanner__TopBar-sc-1avy0c0-1 jVswHX"
    >
      <a
        className="BookBanner__BookTitleLink-sc-1avy0c0-3 iJDVtP"
        data-testid="details-link-collapsed"
        href="/details/books/book-slug-1"
        onClick={[Function]}
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="BookBanner__LeftArrow-sc-1avy0c0-0 jjTVXA StyledIconBase-sc-bdy9j4 jbPeIR"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
          />
        </svg>
        Test Book 1
      </a>
    </div>
  </div>,
]
`;

exports[`BookBanner without unsaved changes renders empty state with no page or book 1`] = `
<div
  className="BookBanner__BarWrapper-sc-1avy0c0-5 blPrsP"
/>
`;

exports[`BookBanner without unsaved changes wrapper transition matches snapshot 1`] = `
<div
  className="BookBanner__BarWrapper-sc-1avy0c0-5 bYEYED"
/>
`;
